# beanbay

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v0.1.1-REQUIREMENTS.md  v0.1.1-ROADMAP.md
.planning/research/: BREWING_PARAMETERS.md  ESPRESSO_MACHINE_CAPABILITIES.md
app/: config.py  database.py  main.py
app/models/: __init__.py  bag.py  bean.py  brew_method.py  brew_setup.py  campaign_state.py  equipment.py  measurement.py  pending_recommendation.py
app/routers/: analytics.py  beans.py  brew.py  equipment.py  history.py  insights.py
app/services/: migration.py  optimizer.py  parameter_registry.py  transfer_learning.py
app/templates/: base.html  home.html  welcome.html
app/utils/: brewer_capabilities.py
frontend/: biome.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
migrations/: env.py
migrations/versions/: 3d6e3ff90710_add_optimization_models.py  4500e5aafecb_add_brewer_capability_columns.py  6d76407e7f4e_rename_preinfusion_pct_add_saturation_flow_rate.py  7313802b80a0_merge_phase20_phase21_heads.py  87c4e18a3be4_initial_schema.py  9052fc4244a4_add_param_set_fingerprint_rebuild_.py  a2f1c3d5e7b9_add_parameter_overrides_to_beans.py  f3a2b1c8d9e0_phase21_new_brew_methods.py  (+3 more)
tests/: conftest.py  test_analytics.py  test_beans.py  test_brew.py  test_brew_multimethod.py  test_brew_phase20.py  test_brew_phase21.py  test_brewer_capabilities.py  test_equipment.py  test_history.py  test_insights.py  test_migration.py  test_models.py  test_optimizer.py  test_parameter_registry.py  test_similarity.py  test_transfer_learning.py  test_transfer_learning_integration.py
unraid/: beanbay.xml
(+277 files in other folders)
