[project]
name = "brewflow"
version = "0.1.0"
description = "Phone-first espresso optimization with Bayesian optimization (BayBE)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.18",
    "pydantic-settings>=2.0",
    "baybe==0.14.2",
    "pandas>=2.0",
    "numpy>=1.26,<2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (BayBE integration)"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
