[project]
name = "beanbay"
dynamic = ["version"]
description = "BeanBay — Phone-first espresso optimization with Bayesian optimization (BayBE)"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "baybe>=0.12",
    "fastapi[standard]>=0.115",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "shap>=0.51.0",
    "sqlmodel>=0.0.37",
    "taskiq>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/beanbay/_version.py"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (BayBE integration)"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
